tests/machine/x/clj/outer_join.error
exit status 1
Syntax error reading source at (/workspace/mochi/tests/machine/x/clj/outer_join.clj:110:1).
EOF while reading, starting at line 27

Full report at:
/tmp/clojure-2830573870661470100.edn
